--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Your code here -->
+<!DOCTYPE>
+
+<html>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <title>Cat Perry's Favorite Cats</title>
+    
+</head>
+    <body>
+Hi there, my first unordered website
+    </body>
+</html/>
