added html 5 and comment section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE>
+<!DOCTYPE HTML5>
 
 <html>
 <head>
+    <html lang="en">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>Cat Perry's Favorite Cats</title>
-    
+    <!-- consider the most updated version! -->
 </head>
     <body>
 Hi there, my first unordered website
