edited with npm test

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE HTML5>
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
+    <!-- This is a comment! -->
 <head>
-    <html lang="en">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css"> 
-    <title>Cat Perry's Favorite Cats</title>
-    <!-- consider the most updated version! -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Site Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-    <body>
-Hi there, my first unordered website
-    </body>
-</html/>
+<body>
+</body>
+</html>
